@@ -53,7 +53,7 @@ done)
 # if we have any patches, check if some are patching config.{guess,sub,rpath}
 # and print a warning
 ifneq (, $(DEB_PATCHES))
-CDBS_BUILD_DEPENDS := $(CDBS_BUILD_DEPENDS), patchutils (>= 0.2.25)
+CDBS_BUILD_DEPENDS := $(CDBS_BUILD_DEPENDS), patchutils
 evil_patches_that_do_nasty_things := $(shell\
 if lsdiff=`which lsdiff` ; then \
   $$lsdiff -H $(DEB_PATCHES) \
